SubBt/force-app/main/default/objects/File_Download_History__c/File_Download_History__c.object-meta.xml
<CustomObject>
    <description>Download history for private files.</description>
    <label>File Download History</label>
    <nameField>
        <displayFormat>FDH-{0000000000}</displayFormat>
        <label>File Download Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Download History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>