SubBt/force-app/main/default/objects/File_Download_History__c/fields/DownloadedBy__c.field-meta.xml
<CustomField>
    <fullName>DownloadedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who has downloaded the file.</description>
    <label>Download By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Download_History</relationshipName>
    <type>Lookup</type>
</CustomField>