SubBt/force-app/main/default/objects/File_Download_History__c/fields/DownloadedDate__c.field-meta.xml
<CustomField>
    <fullName>DownloadedDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Download Date</label>
    <type>DateTime</type>
</CustomField>