SubBt/force-app/main/default/objects/File_Download_History__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <description>Downloaded file.</description>
    <label>File</label>
    <referenceTo>File__c</referenceTo>
    <relationshipName>File_Download_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>